--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   firebase_messaging: ^15.1.3
   flutter_stripe: ^11.1.0
   intl: ^0.19.0
+  flutter_rating_bar: ^4.0.0
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -38,8 +40,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  -'assets/default_profile.png'
+  assets:
+    - lib/assets/default_profile.png
+
   #  - images/a_dot_ham.jpeg
 
   # To add custom fonts to your application, add a fonts section here:
